diagnostics: Add `brk` and `futex` to required seccomp policies
Adding graphics package dependency will cause seccomp violation error
in some arm64 boards. Add `brk` and `futex` as a required syscall for
arm64.

Also fix any linting errors.

BUG=b:255259964
TEST=CQ

Change-Id: I5e33de8fb095c5e8dcbcda95a7bb7165d41d046a
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5437675
Reviewed-by: Kerker Yang <kerker@chromium.org>
Commit-Queue: Ethan Cheng <yycheng@google.com>
Reviewed-by: Wei-Luan Wang <weiluanwang@google.com>
Tested-by: Ethan Cheng <yycheng@google.com>

--- a/diagnostics/cros_healthd/seccomp/BUILD.gn
+++ b/diagnostics/cros_healthd/seccomp/BUILD.gn
@@ -26,6 +26,16 @@ if (getenv("ARCH") == "arm") {
   ]
 }
 
+if (getenv("ARCH") == "arm64") {
+  BASE_REQUIRED_SYSCALLS += [
+    # `brk` is used by malloc.
+    "brk",
+
+    # `futex` is used in `libc_start_call_main`.
+    "futex",
+  ]
+}
+
 BASE_DENIED_SYSCALLS = [
   # This often be added because of the syscall that minijail execute the
   # jailed process, which is not needed.
