Replace KEY_EVICTION env variable if USE flag is set
This CL together with the ebuild changes connects the
env variables that control creation of cgroup freezer
for key eviction to the key eviction USE flag.

BUG=b:293161997
TEST=Build with the dependent CL and the USE flag key_eviction.
TEST=See that trunks and tpm_manager cgroup freezer are created
under /sys/fs/cgroup/freezer

Cq-Depend: Chromium:5454666
Cq-Depend: Chromium:5454667
Change-Id: I4bdeb516b3e9bb489f45c8d3ab235b8917ee2546
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5454718
Reviewed-by: Yi Chou <yich@google.com>
Tested-by: Betul Soysal <betuls@google.com>
Commit-Queue: Betul Soysal <betuls@google.com>

--- a/tpm_manager/server/tpm_managerd.conf
+++ b/tpm_manager/server/tpm_managerd.conf
@@ -13,8 +13,9 @@ oom score -100
 
 tmpfiles /usr/lib/tmpfiles.d/tpm_manager.conf
 
-# The key eviction feature would be enabled if this variable is true.
-env KEY_EVICTION=false
+# KEY_EVICTION value is set from the ebuild file if the USE flag is enabled.
+env KEY_EVICTION=""
+
 env TPM_MANAGER_FREEZER_CGROUP_DIR=/sys/fs/cgroup/freezer/tpm_manager
 
 pre-start script
