--- a/trunks/trunksd.conf
+++ b/trunks/trunksd.conf
@@ -18,8 +18,9 @@ oom score -100
 # The runtime TPM selection feature would be enabled if this variable is true.
 env TPM_DYNAMIC=false
 
-# The key eviction feature would be enabled if this variable is true.
-env KEY_EVICTION=false
+# KEY_EVICTION value is set from the ebuild file if the USE flag is enabled.
+env KEY_EVICTION=""
+
 env TRUNKSD_FREEZER_CGROUP_DIR=/sys/fs/cgroup/freezer/trunks
 
 pre-start script
