--- a/shill/BUILD.gn
+++ b/shill/BUILD.gn
@@ -22,10 +22,7 @@ group("all") {
     ":shill-chromeos-dbus-adaptors",
   ]
   if (use.cellular) {
-    deps += [
-      ":cellular_mobile_operator_info_tester",
-      ":set-apn-helper",
-    ]
+    deps += [ ":cellular_mobile_operator_info_tester" ]
   }
 
   if (use.cellular || use.vpn) {
@@ -503,20 +500,6 @@ executable("openvpn-script") {
     ":openvpn-script_config",
     ":target_defaults",
   ]
-}
-
-if (use.cellular) {
-  pkg_config("set-apn-helper_config") {
-    pkg_deps = [ "dbus-1" ]
-  }
-
-  executable("set-apn-helper") {
-    sources = [ "shims/set_apn_helper.c" ]
-    configs += [
-      ":set-apn-helper_config",
-      ":target_defaults",
-    ]
-  }
 }
 
 if (use.cellular) {
