--- a/rmad/system/BUILD.gn
+++ b/rmad/system/BUILD.gn
@@ -12,10 +12,10 @@ pkg_config("target_defaults") {
   pkg_deps = [
     "libbrillo",
     "libchrome",
+    "libdevice_management-client",
     "libruntime_probe-client",
     "libshill-client",
     "libtpm_manager-client",
-    "libuser_data_auth-client",
     "protobuf",
     "system_api",
   ]
@@ -23,7 +23,7 @@ pkg_config("target_defaults") {
 
 source_set("libsystem") {
   sources = [
-    "cryptohome_client_impl.cc",
+    "device_management_client_impl.cc",
     "hardware_verifier_client_impl.cc",
     "power_manager_client_impl.cc",
     "runtime_probe_client_impl.cc",
@@ -36,16 +36,16 @@ source_set("libsystem") {
 if (use.test) {
   pkg_config("test_pkg_deps") {
     pkg_deps = [
+      "libdevice_management-client-test",
       "libruntime_probe-client-test",
       "libshill-client-test",
       "libtpm_manager-client-test",
-      "libuser_data_auth-client-test",
     ]
   }
 
   source_set("libsystem_test") {
     sources = [
-      "cryptohome_client_test.cc",
+      "device_management_client_test.cc",
       "hardware_verifier_client_test.cc",
       "power_manager_client_test.cc",
       "runtime_probe_client_test.cc",
