--- a/fbpreprocessor/BUILD.gn
+++ b/fbpreprocessor/BUILD.gn
@@ -30,6 +30,7 @@ pkg_config("target_defaults") {
     "libchrome",
     "libdebugd-client",
     "libfeatures",
+    "libmetrics",
     "libsession_manager-client",
     "protobuf",
     "system_api",
@@ -56,6 +57,7 @@ static_library("libfbpreprocessord") {
     "firmware_dump.cc",
     "input_manager.cc",
     "manager_impl.cc",
+    "metrics.cc",
     "output_manager.cc",
     "platform_features_client.cc",
     "pseudonymization_manager.cc",
@@ -98,6 +100,10 @@ install_config("install_dbus_config") {
   install_path = "dbus_system_d"
 }
 
+#TODO(b/287451677): Stop disabling this linter warning once it's possible to
+# no longer depend on //metrics:metrics_test_support directly.
+#gnlint: disable=GnLintDepsOtherProjectDirectly
+
 if (use.test) {
   pkg_config("libchrome_test_config") {
     pkg_deps = [ "libchrome-test" ]
@@ -108,6 +114,7 @@ if (use.test) {
       "fake_session_state_manager.cc",
       "firmware_dump_test.cc",
       "input_manager_test.cc",
+      "metrics_test.cc",
       "output_manager_test.cc",
       "pseudonymization_manager_test.cc",
     ]
@@ -120,6 +127,7 @@ if (use.test) {
     deps = [
       ":libfbpreprocessord",
       "//common-mk/testrunner",
+      "//metrics:metrics_test_support",
     ]
     pkg_deps = [ "dbus-1" ]
   }
