dns-proxy: Increase maximum open fds
When a high number of DNS queries are issued, DNS proxy might hit the
open file descriptors limit causing crashes.

Increase the limit following the current Chromium process limit:
- Soft limit from 1024 to 2048.
- Hard limit from 4096 to 16384.

BUG=b:334455309
TEST=issue high number of queries;
     see that crashes are less likely to happen;

Change-Id: I20a46c55f8e1a023c6f37e061303495a585f27f5
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5452652
Tested-by: Jason Iman <jasongustaman@chromium.org>
Reviewed-by: Garrick Evans <garrick@chromium.org>
Commit-Queue: Jason Iman <jasongustaman@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/dns-proxy/init/dns-proxy.conf
+++ b/dns-proxy/init/dns-proxy.conf
@@ -18,6 +18,15 @@ normal exit 0
 # TODO(garrick): Add vm size limit.
 oom score 0
 
+# Increase soft limit of file descriptors to 2048 (default is 1024).
+# Increase hard limit of file descriptors to 16384 (default is 4096).
+# This is to not hit the open file descriptors limit when proxying high number
+# of DNS queries, causing crashes.
+# The number follows Chromium's configuration in:
+# src/platform2/libchromeos-ui/chromeos/ui/chromium_command_builder.cc
+# TODO(b/334785471): Optimize file descriptor usage.
+limit nofile 2048 16384
+
 # Minijail actually forks off the desired process.
 expect fork
 
