camera: diagnostics: Add Privacy shutter analyzer
Privacy shutter analyzer looks for dark frames from camera service.
It considers privacy shutter to be ON when at least
|kNoOfFramesToConsiderAFailure=5| frames were found to be dark
consecutively. It runs as long as the diagnosis session is active at
|kStreamingFrameIntervalDefault=10| fps.

This completes the flow for |CameraIssue::kPrivacyShutterOn|.

BUG=b:304911893
TEST=emerge and deploy cros-camera-libs, check CCA
TEST=/usr/local/bin/cros_camera_diagnostics_test

Disallow-Recycled-Builds: test-failures
Change-Id: I2ad8798d3073f85d6910986aaca3c3be04fc9cdf
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5453032
Tested-by: Imran Ziad <imranziad@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -22,6 +22,7 @@ generate_mojom_bindings("cros_camera_diagnostics_mojom") {
 
 executable("cros_camera_diagnostics_service") {
   sources = [
+    "analyzers/privacy_shutter_analyzer.cc",
     "camera_diagnostics_main.cc",
     "camera_diagnostics_mojo_manager.cc",
     "camera_diagnostics_processor.cc",
