camera: diagnostics: Add dirty lens analyzer
Enable dirty lens anlyzer. This completes the flow for
|CameraIssue::kDirtyLens|.

BUG=b:304911893
TEST=emerge and deploy cros-camera-libs, check CCA
TEST=/usr/local/bin/cros_camera_diagnostics_test

Disallow-Recycled-Builds: test-failures
Change-Id: I849c275211c6f17e4d3b0a89a4c7a36746055d4c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5453078
Tested-by: Imran Ziad <imranziad@chromium.org>
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -22,6 +22,7 @@ generate_mojom_bindings("cros_camera_diagnostics_mojom") {
 
 executable("cros_camera_diagnostics_service") {
   sources = [
+    "analyzers/dirty_lens_analyzer.cc",
     "analyzers/privacy_shutter_analyzer.cc",
     "camera_diagnostics_main.cc",
     "camera_diagnostics_mojo_manager.cc",
@@ -29,7 +30,6 @@ executable("cros_camera_diagnostics_service") {
     "camera_diagnostics_server.cc",
     "camera_diagnostics_session.cc",
     "camera_service_controller.cc",
-    "dirty_lens_analyzer.cc",
   ]
   configs += [ "//camera/build:cros_camera_common" ]
   pkg_deps = [
