Reapply "resourced: Add base_slice_ns config"
In this change we set the EEVDF scheduler base_slice_ns to a minimum
of 6ms based on testing results.

The bind mount is added conditionally on the existence of the
/sys/kernel/debug/sched path.

BUG=b:328501200
TEST=manual tested on dut

Change-Id: Icf9e86a967b4d486ebe6bc838a2b498708def8e0
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5454719
Reviewed-by: David Stevens <stevensd@chromium.org>
Reviewed-by: Allen Webb <allenwebb@google.com>
Commit-Queue: Youssef Esmat <youssefesmat@chromium.org>
Tested-by: Youssef Esmat <youssefesmat@chromium.org>

--- a/resourced/init/resourced.conf
+++ b/resourced/init/resourced.conf
@@ -36,11 +36,19 @@ script
     THP_MOUNT="-b /sys/kernel/mm/transparent_hugepage,,1"
   fi
 
+  # The sched debugfs path is used to tune the scheduler. Depending on the
+  # kernel/scheduler used, the path might not exist.
+  SCHED_MOUNT=""
+  if [ -d "/sys/kernel/debug/sched" ]; then
+    SCHED_MOUNT="-b /sys/kernel/debug/sched,,1"
+  fi
+
   exec minijail0                                                        \
     --config /usr/share/minijail/resourced.conf                         \
     --seccomp-bpf-binary /usr/share/policy/resourced-seccomp.policy.bpf \
     ${POWER_CAP_MOUNT}                                                  \
     ${THP_MOUNT}                                                        \
+    ${SCHED_MOUNT}                                                      \
     -- /usr/bin/resourced
 end script
 
