--- a/cryptohome/BUILD.gn
+++ b/cryptohome/BUILD.gn
@@ -19,7 +19,6 @@ group("all") {
     ":homedirs_initializer",
     ":install_dbus_config",
     ":install_tmpfilesd_cryptohome",
-    ":install_tmpfilesd_freezer",
     ":install_udev_rule",
     ":lockbox-cache",
     ":lockbox-cache-manager",
@@ -61,13 +60,6 @@ config("target_defaults") {
 config("local_print_proto_include") {
   # This config is used when any build target used the print_proto.
   include_dirs = [ "${target_gen_dir}/.." ]
-}
-
-# We invoke systemd-tmpfiles explicitly from the upstart config
-# since it needs to run when /sys/fs/cgroup is available.
-install_config("install_tmpfilesd_freezer") {
-  sources = [ "tmpfiles.d/cryptohome_freezer.conf" ]
-  install_path = "tmpfiled_ondemand"
 }
 
 action("print_proto_library") {
@@ -267,10 +259,7 @@ install_config("install_udev_rule") {
 }
 
 install_config("install_tmpfilesd_cryptohome") {
-  sources = [
-    "tmpfiles.d/cryptohome.conf",
-    "tmpfiles.d/cryptohome_freezer.conf",
-  ]
+  sources = [ "tmpfiles.d/cryptohome.conf" ]
   install_path = "tmpfilesd"
 }
 
