typecd: Add port status to typecd_tool
Add port status to typecd tool. The initial status command will print
unproccessed information typecd_tool receives from typecd over D-Bus.
This will include port location, active mode, and SOP/SOP' identity,
revision and mode support.

BUG=b:280490175
TEST=FEATURES=test emerge-brya chromeos-base/typecd, manually checked
port partner and cable information was correctly printed out by
typecd_tool.

Change-Id: Ic613ec39c92657c19c6dad3e079ef91ccbaf1114
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5454869
Reviewed-by: Benson Leung <bleung@google.com>
Tested-by: Jameson Thies <jthies@google.com>
Commit-Queue: Jameson Thies <jthies@google.com>

--- a/typecd/BUILD.gn
+++ b/typecd/BUILD.gn
@@ -75,6 +75,7 @@ static_library("typecd_common") {
     "chrome_features_service_client.cc",
     "cros_ec_util.cc",
     "dbus_manager.cc",
+    "dbus_utils.cc",
     "metrics.cc",
     "partner.cc",
     "pdo.cc",
