chromeos-config: cros_config_host: Add main_rw_a_hash to FirmwareInfo
Add the CrOS config properties "main-rw-a-hash" and
"main-rw-a-hash-algorithm" to FirmwareInfo for the firmware packer to
verify the generated AP firmware images.

BUG=b:325886850
TEST=./run_tests

Change-Id: I8df014399391004f6510c46bb54d1825a8f8cc16
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5464807
Reviewed-by: Jesse McGuire <jessemcguire@google.com>
Tested-by: Yu-Ping Wu <yupingso@chromium.org>
Commit-Queue: Yu-Ping Wu <yupingso@chromium.org>

--- a/chromeos-config/test_data/test.yaml
+++ b/chromeos-config/test_data/test.yaml
@@ -283,6 +283,8 @@ chromeos:
               ec-ro-image: "bcs://Another_EC.1111.11.1.tbz2"
               main-ro-image: "bcs://Another.1111.11.1.tbz2"
               main-rw-image: "bcs://Another_RW.1111.11.1.tbz2"
+              main-rw-a-hash: "4c7655c067999e7cf097f050d05666cb"
+              main-rw-a-hash-algorithm: "md5sum"
               build-targets:
                 base: "another_base"
                 ec_extras:
