libstorage: Add partition backing device
Dumb backing device that represent a pre-existing storage partition
(sda, sda6, mmcblok0p1,...)

Use by chromeos_startup, in conjunction with unencrypted storage device
to represent stateful when LVM is not used.

BUG=b:232167376
TEST=Compile.

Change-Id: I21ef9e189d08ec831ec11210a9e6285932bcf61f
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5455524
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Daniil Lunev <dlunev@chromium.org>

--- a/libstorage/storage_container/BUILD.gn
+++ b/libstorage/storage_container/BUILD.gn
@@ -29,6 +29,7 @@ shared_library("libstorage_storage_container") {
     "ext4_container.cc",
     "fscrypt_container.cc",
     "loopback_device.cc",
+    "partition_device.cc",
     "ramdisk_device.cc",
     "storage_container_factory.cc",
     "unencrypted_container.cc",
@@ -77,6 +78,7 @@ install_config("install_libstorage_container_headers") {
     "fscrypt_container.h",
     "logical_volume_backing_device.h",
     "loopback_device.h",
+    "partition_device.h",
     "ramdisk_device.h",
     "storage_container.h",
     "storage_container_factory.h",
