libstorage: Generalize ephemeral container into unencrypted container
Add a new container: unencrypted.
An ephemeral container is now a unencrypted container backed by a ramdisk.
In addition, the ephemeral container reset the underlying backing device
on creation and remove it on destruction, while the unencrypted
container leave it around.

BUG=b:232167376
TEST=Unit tests, tast run $DUT cryptohome.*, CQ

Change-Id: Ia0080f1d0e9d01426ebcfcbb57184ce161321b4d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5455523
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-by: Daniil Lunev <dlunev@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/libstorage/storage_container/BUILD.gn
+++ b/libstorage/storage_container/BUILD.gn
@@ -31,6 +31,7 @@ shared_library("libstorage_storage_container") {
     "loopback_device.cc",
     "ramdisk_device.cc",
     "storage_container_factory.cc",
+    "unencrypted_container.cc",
   ]
   if (use.device_mapper) {
     sources += [
@@ -79,6 +80,7 @@ install_config("install_libstorage_container_headers") {
     "ramdisk_device.h",
     "storage_container.h",
     "storage_container_factory.h",
+    "unencrypted_container.h",
   ]
   install_path = "/usr/include/libstorage/storage_container"
 }
@@ -87,11 +89,12 @@ if (use.test) {
   executable("storage_container_testrunner") {
     sources = [
       "ecryptfs_container_test.cc",
-      "ephemeral_container_test.cc",
       "ext4_container_test.cc",
       "fscrypt_container_test.cc",
       "loopback_device_test.cc",
       "ramdisk_device_test.cc",
+      "storage_container_factory_test.cc",
+      "unencrypted_container_test.cc",
     ]
     if (use.device_mapper) {
       sources += [
