camera: diagnostics: Disable dirty lens analyzer without dlc
Dirty lens analyzer depends on cros-camera-blur-detector-dlc which is
only available when dlc IUSE flag is enabled. Control the usage with
this usage flag.

BUG=b:304912538
TEST=USE=-dlc emerge|deploy cros-camera-diagnostics

Cq-Depend: chromium:5459051
Disallow-Recycled-Builds: test-failures
Change-Id: I9b1dfc28c2ae06621b6d1cddae1325dfc490b6f7
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5458673
Reviewed-by: Ryota Okuji <okuji@chromium.org>
Commit-Queue: Imran Ziad <imranziad@chromium.org>
Tested-by: Imran Ziad <imranziad@chromium.org>

--- a/camera/diagnostics/BUILD.gn
+++ b/camera/diagnostics/BUILD.gn
@@ -22,8 +22,6 @@ generate_mojom_bindings("cros_camera_diagnostics_mojom") {
 
 executable("cros_camera_diagnostics_service") {
   sources = [
-    "analyzers/dirty_lens_analyzer.cc",
-    "analyzers/privacy_shutter_analyzer.cc",
     "camera_diagnostics_main.cc",
     "camera_diagnostics_mojo_manager.cc",
     "camera_diagnostics_processor.cc",
@@ -31,7 +29,10 @@ executable("cros_camera_diagnostics_service") {
     "camera_diagnostics_session.cc",
     "camera_service_controller.cc",
   ]
-  configs += [ "//camera/build:cros_camera_common" ]
+  configs += [
+    "//camera/build:cros_camera_common",
+    ":camera_diagnostics_config",
+  ]
   pkg_deps = [
     "libbrillo",
     "libcros_camera",
@@ -48,10 +49,14 @@ executable("cros_camera_diagnostics_service") {
   ]
   deps = [
     ":cros_camera_diagnostics_mojom",
-    "//camera/diagnostics/libs:blur_detector",
+    "//camera/diagnostics/analyzers:analyzers",
     "//ml_core/dlc:dlc_client",
   ]
   install_path = "bin"
+}
+
+config("camera_diagnostics_config") {
+  defines = [ "USE_DLC=${use.dlc}" ]
 }
 
 install_config("install_cros_camera_diagnostics_conf") {
