init: startup: Use tpm library directly
Instead of forking mount-encrypted, call the TPM library directly:
- If the TPM can not be initialize, reboot, then recover
- Obtain the raw key material in test mode.

BUG=b:172221451,b:309961872
TEST=CQ, check tast run <IP> rollback.Smoke*

Cq-Depend: chromium:5611447
Change-Id: I9f913e44d7b85c9cabeb33fef19305756d8c2984
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5610984
Reviewed-by: Sarthak Kukreti <sarthakkukreti@google.com>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/init/BUILD.gn
+++ b/init/BUILD.gn
@@ -124,6 +124,9 @@ static_library("libcrosstartup") {
     ":libinit_utils",
     ":libtpm_encryption",
   ]
+  if (use.encrypted_stateful) {
+    deps += [ ":libmount_encrypted" ]
+  }
 }
 
 static_library("libclobber") {
