--- a/soul/reaper/Cargo.toml
+++ b/soul/reaper/Cargo.toml
@@ -11,7 +11,9 @@ chromeos = []
 anyhow = "1.0"
 chrono = "0.4"
 env_logger = "0.9"
+itertools = "0.11"
 log = "0.4"
+num_enum = "0.5"
 serde = { version = "1.0", features = [ "derive" ] }
 tokio = { version = "1.0", features = [ "macros", "rt-multi-thread", "sync", "time" ] }
 toml = "0.5"
