patchpanel: implement TagSocket in SocketService.
Add a TagSocket implementation to the SocketService by calling the
RoutingService.

BUG=b:331620358
TEST=FEATURES=test emerge-$BOARD chromeos-base/patchpanel

Change-Id: I98ff7970273e0c24db2242c2b0170641d4130e3b
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5493561
Tested-by: Damien Dejean <damiendejean@google.com>
Commit-Queue: Damien Dejean <damiendejean@google.com>
Reviewed-by: Jason Iman <jasongustaman@chromium.org>
Reviewed-by: Hugo Benichi <hugobenichi@google.com>

--- a/patchpanel/BUILD.gn
+++ b/patchpanel/BUILD.gn
@@ -366,6 +366,7 @@ if (use.test) {
       "qos_service_test.cc",
       "routing_service_test.cc",
       "shill_client_test.cc",
+      "socket_service_adaptor_test.cc",
       "subnet_pool_test.cc",
       "subnet_test.cc",
       "subprocess_controller_test.cc",
