libsegmentation: cache new CBX value in /run only, save later
Check for feature_level is done early at boot.
At first boot after install, we have to save the value in the VPD.
Since it can take times, when a new value has been computed, save it
in /run/libsegmentation.

Add a new API call to flash the cached value, a new parameter to
feature_check and an upstart job to save to the VPD after the login
screen is up.

BUG=b:333307104
TEST=Using `tast run \
--var="platform.BootPerf.manualReboot=true"
--var="platform.BootPerf.skipRootfsCheck=true" \
${DUT} platform.BootPerf
Compare how it takes to boot with the new version, VPD erased to
simulate the first boot after update:

for i in /tmp/tast/results/*boot*vpd_*/tests/platform.BootPerf/results-chart.json
do
  echo -n $i | cut -zd / -f 5 ; echo -n " : "
  cat $i | jq .seconds_power_on_to_login.summary.values[]
done
new_boot-vpd_absent_20240420-123501 : 11.684
new_boot-vpd_present_20240420-123810 : 11.399
old_boot_vpd_absent_20240420-152603 : 12.612
old_boot_vpd_present_20240420-152350 : 11.373

Change-Id: I1472841067f86f1cf384f10796b52d2fd43a7285
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5470282
Reviewed-by: Brian Norris <briannorris@chromium.org>
Tested-by: Gwendal Grignou <gwendal@chromium.org>
Commit-Queue: Gwendal Grignou <gwendal@chromium.org>

--- a/libsegmentation/BUILD.gn
+++ b/libsegmentation/BUILD.gn
@@ -21,6 +21,9 @@ group("all") {
   if (use.test) {
     deps += [ ":libsegmentation_tests" ]
   }
+  if (use.feature_management) {
+    deps += [ ":install_upstart_backend_config" ]
+  }
 }
 
 default_pkg_deps = [
@@ -155,6 +158,11 @@ executable("feature_check") {
 install_config("install_tmpfiles_config") {
   sources = [ "tmpfiles.d/libsegmentation.conf" ]
   install_path = "tmpfilesd"
+}
+
+install_config("install_upstart_backend_config") {
+  sources = [ "init/libsegmentation-backend.conf" ]
+  install_path = "upstart"
 }
 
 if (use.test) {
