arc: Combine arc-create-data and arc-handle-upgrade into one job
Currently, both arc-create-data and arc-handle-upgrade run as part of
arcvm-post-login-services, and their execution order is undetermined.
However, arc-handle-upgrade should run before arc-create-data, because
arc-handle-upgrade removes Android user data in certain upgrading
schenarios like P-to-T skip upgrade, while ARCVM expects Android user
data to be set up by arc-create-data when virtio-fs /data is used.
To ensure the execution order, this CL combines the two jobs into a new
Upstart job arcvm-preapre-data.
Note that the new Upstart job uses different minijail configs depending
on ARCVM /data type:
  1) For virtio-fs /data, it needs to be set up and mounted on
     /run/arcvm/android-data/mount in the concierge namespace.
  2) For virtio-blk /data, the job temporarily mounts /data, which
     is safer to perform in a confined minimalistic namespace.

BUG=b:333350471
TEST=Confirm that arcvm-prepare-data succeeds for each /data type on
     1) initial boots, 2) regular boots, and 3) upgrading scenarios.
TEST=Upgrading metrics are correctly sent with each /data type.
TEST=tast run '("name:arc.*" && "group:mainline" && !informational)'

Change-Id: If27e1fdb15e3a23b4497e119b4cd3d2b2a7b060d
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467268
Commit-Queue: Momoko Hattori <momohatt@chromium.org>
Tested-by: Momoko Hattori <momohatt@chromium.org>
Reviewed-by: Yury Khmel <khmel@google.com>
Reviewed-by: Satoshi Niwa <niwa@chromium.org>

--- a/arc/setup/BUILD.gn
+++ b/arc/setup/BUILD.gn
@@ -26,8 +26,7 @@ group("all") {
   if (use.arcvm) {
     deps += [
       ":arc-apply-per-board-config",
-      ":arc-create-data",
-      ":arc-handle-upgrade",
+      ":arcvm-prepare-data",
       "xml:arc-packages-xml-reader",
     ]
   }
@@ -105,9 +104,9 @@ install_config("install_minijail_configs") {
   }
   if (use.arcvm) {
     sources += [
-      "init/minijail/arc-create-data.conf",
-      "init/minijail/arc-handle-upgrade.conf",
       "init/minijail/arcvm-per-board-features.conf",
+      "init/minijail/arcvm-prepare-virtio-blk-data.conf",
+      "init/minijail/arcvm-prepare-virtio-fs-data.conf",
     ]
   }
   install_path = "minijail_conf"
@@ -138,9 +137,8 @@ install_config("install_upstart_configs") {
   }
   if (use.arcvm) {
     sources += [
-      "init/arc-create-data.conf",
-      "init/arc-handle-upgrade.conf",
       "init/arcvm-per-board-features.conf",
+      "init/arcvm-prepare-data.conf",
     ]
   }
   install_path = "upstart"
@@ -221,15 +219,8 @@ executable("arc-apply-per-board-config") {
   install_path = "sbin"
 }
 
-executable("arc-create-data") {
-  sources = [ "arc_create_data_main.cc" ]
-  configs += [ ":target_defaults" ]
-  deps = [ ":libarc_setup" ]
-  install_path = "sbin"
-}
-
-executable("arc-handle-upgrade") {
-  sources = [ "arc_handle_upgrade_main.cc" ]
+executable("arcvm-prepare-data") {
+  sources = [ "arcvm_prepare_data_main.cc" ]
   configs += [ ":target_defaults" ]
   deps = [ ":libarc_setup" ]
   install_path = "sbin"
