--- a/arc/vm/scripts/init/arcvm-post-login-services.conf
+++ b/arc/vm/scripts/init/arcvm-post-login-services.conf
@@ -11,7 +11,7 @@ oom score -100
 # This job is started by the Chrome Browser.
 stop on stop-arcvm-instance or stopping vm_concierge or stopping ui
 
-# Exports for arc-create-data and arc-handle-upgrade.
+# Exports for arcvm-prepare-data.
 import CHROMEOS_USER
 export CHROMEOS_USER
 import ARCVM_DATA_TYPE
