--- a/arc/setup/init/minijail/arcvm-prepare-virtio-blk-data.conf
+++ b/arc/setup/init/minijail/arcvm-prepare-virtio-blk-data.conf
@@ -1,5 +1,9 @@
 % minijail-config-file v0
 
+# Copyright 2024 The ChromiumOS Authors
+# Use of this source code is governed by a BSD-style license that can be
+# found in the LICENSE file.
+
 # cap_sys_admin and /dev mount are needed for loop mounting virtio-blk /data.
 
 c = cap_dac_override,cap_dac_read_search,cap_chown,cap_fowner,cap_sys_admin+eip
