crash: support fbpreprocessord
Add relevant logs to the crash report when fbpreprocessord crashes.

BUG=b:291346820
TEST=deploy the config file to DUT, kill -6 fbpreprocessord, inspect the
content of /var/spool/crash

Change-Id: I5db10afaf6694687bb2186ad682fe353d3b6d44c
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467373
Tested-by: Nicolas Norvez <norvez@chromium.org>
Commit-Queue: Nicolas Norvez <norvez@chromium.org>
Reviewed-by: Ian Barkley-Yeung <iby@chromium.org>

--- a/crash-reporter/crash_reporter_logs.conf
+++ b/crash-reporter/crash_reporter_logs.conf
@@ -807,6 +807,14 @@ hpsd=\
   tail -100 /var/log/power_manager/powerd.LATEST; \
   echo EOF
 
+# fbpreprocessor daemon
+fbpreprocessord=\
+  echo "=== syslog entries ==="; \
+  croslog --identifier=fbpreprocessord --lines=1000 | tail -n 100; \
+  echo "=== syslog mentions ==="; \
+  croslog --grep=fbpreprocessord --lines=1000 | tail -n 100; \
+  echo EOF
+
 # feature daemon
 featured=\
   echo "=== syslog entries ==="; \
