arc: Add GenerateBcc to ARC RPC
This CL adds the function GenerateBcc, and the necessary
helper functions of cose signatures to ARC
Remote Provisioning Context along with their unit-tests.

BUG=b:327492171
TEST=emerge-brya chromeos-base/arc-keymint
TEST=cros_workon_make --board=brya chromeos-base/arc-keymint --test

Change-Id: I6ce0f969eedf66c51a30d8893200e87327ca6e94
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5468630
Reviewed-by: Seth Moore <sethmo@google.com>
Commit-Queue: Vaibhav Raheja <vraheja@chromium.org>
Reviewed-by: John L Chen <zuan@chromium.org>
Reviewed-by: Yao Li <yaohuali@google.com>
Reviewed-by: Vadim Sukhomlinov <sukhomlinov@google.com>
Tested-by: Vaibhav Raheja <vraheja@chromium.org>

--- a/arc/keymint/BUILD.gn
+++ b/arc/keymint/BUILD.gn
@@ -222,6 +222,7 @@ shared_library("libarckeymint_context") {
     "context/crypto_operation.cc",
     "context/openssl_utils.cc",
   ]
+  libs = [ "arc-attestation" ]
   public_configs = [ ":libarckeymint_context_config" ]
   configs += [
     # Needed since the keymint context doesn't follow CrOS's guidelines.
@@ -378,10 +379,13 @@ if (use.test) {
       ":arc-keymintd_testrunner_config",
       ":boringssl_config",
     ]
+    libs = [ "arc-attestation" ]
     deps = [
       ":keymint_mojo_bindings",
       ":libarckeymint_context",
+      ":libcppbor_external",
       ":libkeymint",
+      ":liblog",
       "//common-mk/testrunner:testrunner",
     ]
   }
