arc: Use ARCVM /data type passed from Chrome in arc-handle-upgrade
Currently, arc-handle-upgrade determines the type of ARCVM /data by
inspecting file paths.
However, it could be wrong in some corner cases where virtio-blk /data
is temporarily enabled via a feature flag and then disabled.
Since it is Chrome who specifies the /data type, it should be simpler
and (in principle) more accurate to pass the type from Chrome.
This change depends on CL:5464275.

BUG=b:335894331
TEST=FEATURES=test emerge-<board> arc-setup
TEST=arc-handle-upgrade works correctly for each /data type on:
     1) initial boots, 2) regular boots, and 3) upgrading scenarios.

Change-Id: I46680c2a36d0e9d4ca32e8100e2a1d45b95cd543
Reviewed-on: https://chromium-review.googlesource.com/c/chromiumos/platform2/+/5467617
Reviewed-by: Yury Khmel <khmel@chromium.org>
Reviewed-by: Momoko Hattori <momohatt@chromium.org>
Tested-by: Momoko Hattori <momohatt@chromium.org>
Commit-Queue: Momoko Hattori <momohatt@chromium.org>
Reviewed-by: Satoshi Niwa <niwa@chromium.org>
Reviewed-by: Yury Khmel <khmel@google.com>

--- a/arc/vm/scripts/init/arcvm-post-login-services.conf
+++ b/arc/vm/scripts/init/arcvm-post-login-services.conf
@@ -11,6 +11,8 @@ oom score -100
 # This job is started by the Chrome Browser.
 stop on stop-arcvm-instance or stopping vm_concierge or stopping ui
 
-# Export for arc-create-data.
+# Exports for arc-create-data and arc-handle-upgrade.
 import CHROMEOS_USER
 export CHROMEOS_USER
+import ARCVM_DATA_TYPE
+export ARCVM_DATA_TYPE
