--- a/arc/setup/init/arc-handle-upgrade.conf
+++ b/arc/setup/init/arc-handle-upgrade.conf
@@ -13,6 +13,7 @@ oom score never
 task
 
 import CHROMEOS_USER
+import ARCVM_DATA_TYPE
 
 pre-start script
     CHROMEOS_USER_HOME=$(cryptohome-path system "${CHROMEOS_USER}")
@@ -22,9 +23,17 @@ pre-start script
       exit 1
     fi
 
+    if [ "${ARCVM_DATA_TYPE}" != "virtiofs" ] &&
+       [ "${ARCVM_DATA_TYPE}" != "lvm_volume" ] &&
+       [ "${ARCVM_DATA_TYPE}" != "concierge_disk" ]; then
+      logger -t "${UPSTART_JOB}" "Invalid /data type: ${ARCVM_DATA_TYPE}"
+      exit 1
+    fi
+
     exec /sbin/minijail0 --config /usr/share/minijail/arc-handle-upgrade.conf \
         -k "${CHROMEOS_USER_HOME},${CHROMEOS_USER_HOME},none,MS_BIND|MS_REC" \
-        -- /usr/sbin/arc-handle-upgrade --log_tag=arc-handle-upgrade
+        -- /usr/sbin/arc-handle-upgrade --log_tag=arc-handle-upgrade \
+            --data_type="${ARCVM_DATA_TYPE}"
 end script
 
 # This is needed to ensure this job doesn't remain in the started state.
